--- a/renderer/home.html
+++ b/renderer/home.html
@@ -4,240 +4,481 @@
   <meta charset="UTF-8" />
   <title>CubicLauncher - Home</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       background: url(img/bg.png);
+      background-size: cover;
+      background-position: center;
       font-family: 'Orbitron', system-ui, sans-serif;
       min-height: 100vh;
       overflow: hidden;
+      color: #fff;
     }
-    .layout {
+
+    .container {
       display: flex;
       height: 100vh;
       width: 100vw;
     }
+
     .sidebar {
       width: 90px;
-      background: url(img/bg.png);
-      border-right: 4px solid #222;
+      background: rgba(0, 0, 0, 0.3);
+      border-right: 2px solid rgba(255, 255, 255, 0.1);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      position: relative;
+      padding: 20px 0;
+      backdrop-filter: blur(10px);
     }
+
     .sidebar-logo {
-      font-size: 2.5rem;
-      font-weight: bold;
-      margin-top: 18px;
-      margin-bottom: 18px;
-      letter-spacing: -2px;
-      color: #222;
-      font-family: 'Orbitron', sans-serif;
-    }
-    .sidebar-icons {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 32px;
-    }
-    .sidebar-icon {
-      width: 64px;
-      height: 48px;
-      background: #fff;
-      border: 4px solid #222;
-      border-radius: 12px;
-      font-size: 1.2rem;
-      color: #222;
+      width: 100%;
+      height: auto;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Orbitron', sans-serif;
-      margin-bottom: 8px;
-      cursor: pointer;
-      transition: box-shadow 0.2s;
     }
-    .sidebar-icon:hover {
-      box-shadow: 0 0 0 2px #3a86ff;
+
+    .sidebar-logo img {
+      width: 70px;
+      height: auto;
     }
+
     .sidebar-bottom {
-      margin-bottom: 18px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 10px;
     }
-    .sidebar-bottom-icon {
-      width: 40px;
-      height: 40px;
+
+    .sidebar-icon {
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
-      background: #fff;
-      border: 4px solid #222;
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid rgba(255, 255, 255, 0.3);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.5rem;
       cursor: pointer;
+      font-size: 1.3rem;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(5px);
     }
+
+    .sidebar-icon:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.6);
+      transform: scale(1.05);
+    }
+
     .main-content {
       flex: 1;
       display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: flex-start;
+      align-items: center;
+      justify-content: space-between;
+      padding: 60px 80px;
       position: relative;
-      padding: 0 0 0 48px;
+      opacity: 1;
+      transition: opacity 0.5s ease-out;
     }
+
     .content-left {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      margin-top: 80px;
-      min-width: 420px;
+      gap: 20px;
+      max-width: 600px;
     }
+
     .title {
-      font-size: 2.8rem;
-      font-family: 'Orbitron', sans-serif;
+      font-size: 2.2rem;
       font-weight: bold;
-      color: #222;
-      margin-bottom: 0;
-      letter-spacing: -2px;
+      letter-spacing: 2px;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      line-height: 1.2;
     }
+
     .subtext {
-      font-size: 1.3rem;
-      color: #222;
-      margin-bottom: 18px;
+      font-size: 1.2rem;
+      letter-spacing: 1px;
+      text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+      opacity: 0.9;
+    }
+
+    .launch-btn {
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(240, 248, 255, 0.9));
+      color: #111;
+      border: 2px solid rgba(255, 255, 255, 0.4);
+      padding: 14px 40px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
       font-family: 'Orbitron', sans-serif;
       letter-spacing: 1px;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      margin-top: 10px;
     }
-    .play-btn {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.3rem;
-      background: #fff;
-      border: 4px solid #222;
-      border-radius: 12px;
-      padding: 12px 32px;
-      cursor: pointer;
-      margin-top: 8px;
-      margin-bottom: 8px;
-      transition: box-shadow 0.2s;
-      display: flex;
-      align-items: center;
-      gap: 10px;
+
+    .launch-btn:hover:not(:disabled) {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+      background: linear-gradient(135deg, rgba(255, 255, 255, 1), rgba(200, 230, 255, 1));
     }
-    .play-btn:hover {
-      box-shadow: 0 0 0 2px #3a86ff;
-      background: #f0f8ff;
+
+    .launch-btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
     }
-    .profile-area {
-      position: absolute;
-      top: 32px;
-      right: 48px;
+
+    .profile-section {
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
-      gap: 12px;
+      align-items: center;
+      gap: 20px;
     }
+
     .profile-img {
-      width: 96px;
-      height: 96px;
-      border-radius: 32px 32px 32px 32px;
-      border: 4px solid #222;
-      background: #eee;
+      width: 120px;
+      height: 120px;
+      border-radius: 16px;
+      border: 3px solid rgba(255, 255, 255, 0.3);
+      background: rgba(0, 0, 0, 0.3);
       object-fit: cover;
       image-rendering: pixelated;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-    .status-dot {
-      position: absolute;
-      bottom: 18px;
-      right: 18px;
-      width: 24px;
-      height: 24px;
-      background: #3ad86f;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      z-index: 2;
+
+    .profile-img:hover {
+      transform: scale(1.05);
+      border-color: rgba(255, 255, 255, 0.6);
     }
+
     .settings-btn {
-      position: absolute;
-      bottom: 18px;
-      right: 48px;
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
-      background: #fff;
-      border: 4px solid #222;
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      color: #fff;
+      font-size: 1.3rem;
+      cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      cursor: pointer;
-      transition: box-shadow 0.2s;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(5px);
     }
+
     .settings-btn:hover {
-      box-shadow: 0 0 0 2px #3a86ff;
-      background: #f0f8ff;
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.6);
+      transform: scale(1.05);
     }
-    .nintencubelogo {
-      font-family: 'logo', sans-serif;
-      font-size: 3.5rem;
+
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(5px);
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    .modal.show {
+      display: flex;
+    }
+
+    .modal-content {
+      background: linear-gradient(135deg, rgba(30, 30, 40, 0.95), rgba(50, 50, 70, 0.95));
+      color: #fff;
+      border-radius: 16px;
+      width: 420px;
+      max-width: 90%;
+      padding: 30px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+    }
+
+    .modal-header {
+      margin-bottom: 20px;
+    }
+
+    .modal-title {
+      font-size: 1.5rem;
       font-weight: bold;
-      color: #ffffff;
-      margin: 0;
-      letter-spacing: 3px
-    }
-    @font-face {
-    font-family: logo;
-    src: url("font/logo.otf") format("opentype");
-    }
-    .textsubtext {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.2rem;
-      color: #ffffff;
-      margin: 0;
+      margin-bottom: 8px;
       letter-spacing: 1px;
+    }
+
+    .modal-description {
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+
+    .modal-profile {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      margin-bottom: 24px;
+      padding: 16px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 8px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .modal-skin {
+      width: 64px;
+      height: 64px;
+      border-radius: 8px;
+      border: 2px solid rgba(255, 255, 255, 0.2);
+      image-rendering: pixelated;
+      flex-shrink: 0;
+    }
+
+    .modal-user-info {
+      flex: 1;
+    }
+
+    .modal-user-name {
+      font-weight: 700;
+      font-size: 1rem;
+      margin-bottom: 4px;
+    }
+
+    .modal-user-uuid {
+      font-size: 0.85rem;
+      opacity: 0.7;
+      word-break: break-all;
+    }
+
+    .modal-buttons {
+      display: flex;
+      gap: 12px;
+      justify-content: flex-end;
+    }
+
+    .modal-btn {
+      padding: 10px 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 0.9rem;
+      transition: all 0.3s ease;
+      font-weight: 600;
+    }
+
+    .modal-btn-logout {
+      background: #d9534f;
+      color: #fff;
+    }
+
+    .modal-btn-logout:hover {
+      background: #c9423f;
+      transform: translateY(-1px);
+    }
+
+    .modal-btn-close {
+      background: rgba(255, 255, 255, 0.1);
+      color: #fff;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .modal-btn-close:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateY(-1px);
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeOut {
+      from {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      to {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+    }
+
+    .fade-in {
+      animation: fadeIn 0.5s ease-out;
+    }
+
+    .fade-out {
+      animation: fadeOut 0.3s ease-in;
+    }
+
+    .language-selector {
+      display: none;
+    }
+
+    .lang-btn {
+      padding: 6px 12px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.1);
+      color: #fff;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.8rem;
+      transition: all 0.3s ease;
+      font-family: 'Orbitron', sans-serif;
+      backdrop-filter: blur(5px);
+    }
+
+    .lang-btn:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.6);
+    }
+
+    .lang-btn.active {
+      background: rgba(255, 255, 255, 0.3);
+      border-color: rgba(255, 255, 255, 0.8);
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="layout">
+  <div class="container">
     <div class="sidebar">
-      <div class="sidebar-logo"><img src="img/logo_cl_small.png" alt="CL" width="80" height="60"></div>
+      <div class="sidebar-logo">
+        <img src="img/logo_cl_small.png" alt="CubicLauncher" />
+      </div>
       <div class="sidebar-bottom">
-        <div class="sidebar-bottom-icon">&#9788;</div>
+        <div class="sidebar-icon" id="settingsIconBtn" title="Launcher Settings">⚙</div>
+      </div>
+      <div class="language-selector">
+        <button class="lang-btn active" data-lang="en">EN</button>
+        <button class="lang-btn" data-lang="fr">FR</button>
+        <button class="lang-btn" data-lang="es">ES</button>
+        <button class="lang-btn" data-lang="de">DE</button>
       </div>
     </div>
     <div class="main-content">
       <div class="content-left">
-        <div class="title" id="title"><p class="nintencubelogo">nintencube</p></div>
-        <br>
-        <div class="subtext" id="profile"><p class="textsubtext">Amusez-vous bien!</p></div>
-        <button class="play-btn" id="launchBtn">&#9658; JOUER</button>
-      </div>
-      <div class="profile-area">
-        <a href="#" id="profileLink"><img id="skinImg" class="profile-img" src="profile.png" alt="Profile" /></a>
-      </div>
-    
-    <div id="settingsModal" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); align-items:center; justify-content:center;">
-      <div style="background:#fff; color:#111; border-radius:12px; width:420px; max-width:90%; padding:18px; box-shadow:0 8px 40px rgba(0,0,0,0.4); position:relative;">
-        <h3 style="margin:0 0 8px 0;">Account Settings</h3>
-        <p style="margin:0 0 12px 0; color:#333;">Manage account and launcher settings.</p>
-        <div style="display:flex; gap:12px; align-items:center; margin-bottom:12px;">
-          <img id="modalSkin" src="profile.png" style="width:64px;height:64px;border-radius:12px;border:2px solid #222; image-rendering:pixelated;" />
-          <div style="flex:1;">
-            <div id="modalName" style="font-weight:700;">Username</div>
-            <div id="modalUUID" style="font-size:12px;color:#666;">UUID</div>
+        <div class="title" id="title" data-i18n="title">nintencube</div>
+        <div class="subtext" id="profile" data-i18n="ready">Ready to play!</div>
+        <div style="display:flex; gap:12px; align-items:center;">
+          <button class="launch-btn" id="launchBtn" data-i18n="launch">▶ JOUER</button>
+          <div style="width:140px; height:8px; background:rgba(255,255,255,0.1); border-radius:4px; overflow:hidden; display:none;" id="progressBarContainer">
+            <div id="playProgressBar" style="height:100%; width:0%; background:linear-gradient(90deg,rgba(255,255,255,0.6),rgba(255,255,255,0.2)); transition:width 0.2s ease;"></div>
           </div>
         </div>
-        <div style="display:flex; gap:8px; justify-content:flex-end;">
-          <button id="modalLogout" style="background:#d9534f;color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;">Logout</button>
-          <button id="modalClose" style="background:#eee;border:1px solid #ccc;padding:8px 12px;border-radius:8px;cursor:pointer;">Close</button>
-        </div>
+      </div>
+
+      <div class="profile-section">
+        <a href="#" id="profileLink">
+          <img id="skinImg" class="profile-img" src="profile.png" alt="Profile" />
+        </a>
       </div>
     </div>
+  </div>
+
+  <!-- Account Settings Modal -->
+  <div id="settingsModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title" data-i18n="accountSettings">Account Settings</div>
+        <div class="modal-description" data-i18n="manageAccount">Manage your account</div>
+      </div>
+
+      <div class="modal-profile">
+        <img id="modalSkin" class="modal-skin" src="profile.png" alt="Skin" />
+        <div class="modal-user-info">
+          <div class="modal-user-name" id="modalName">Username</div>
+          <div class="modal-user-uuid" id="modalUUID">UUID</div>
+        </div>
+      </div>
+
+      <div style="margin-top:12px; padding:8px; background: rgba(0,0,0,0.04); border-radius:8px;">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:8px;">
+          <div style="font-weight:700;">Accounts</div>
+          <button id="addAccountBtn" class="modal-btn modal-btn-close" style="padding:6px 10px;">Add Account</button>
+        </div>
+        <div id="accountsList" style="display:flex; flex-direction:column; gap:8px; max-height:200px;"></div>
+      </div>
+
+      <div class="modal-buttons">
+        <button id="modalLogout" class="modal-btn modal-btn-logout" data-i18n="logout">Logout</button>
+        <button id="modalClose" class="modal-btn modal-btn-close" data-i18n="close">Close</button>
+      </div>
     </div>
   </div>
+
+  <!-- Launcher Settings Modal -->
+  <div id="launcherSettingsModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title" data-i18n="launcherSettings">Launcher Settings</div>
+        <div class="modal-description" data-i18n="configureLauncher">Configure launcher options</div>
+      </div>
+
+      <div style="padding: 16px; background: rgba(255, 255, 255, 0.05); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.1); margin-bottom: 24px;">
+        <div style="margin-bottom: 16px;">
+          <label style="display: flex; flex-direction: column; gap: 8px;">
+            <span style="opacity: 0.9;" data-i18n="language">Language</span>
+            <select id="languageSelect" style="padding: 8px; border: 1px solid rgba(255, 255, 255, 0.2); border-radius: 6px; background: rgba(255, 255, 255, 0.1); color: #fff; font-family: inherit; font-size: 0.9rem;">
+              <option value="en">English</option>
+              <option value="fr">Français</option>
+              <option value="es">Español</option>
+              <option value="de">Deutsch</option>
+            </select>
+          </label>
+        </div>
+        <div style="margin-bottom: 12px;">
+          <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+            <input type="checkbox" id="autoLaunchCheck" style="width: 18px; height: 18px; cursor: pointer;" />
+            <span data-i18n="autoLaunch">Auto-launch on start</span>
+          </label>
+        </div>
+        <div>
+          <label style="display: flex; flex-direction: column; gap: 8px;">
+            <span style="opacity: 0.9;" data-i18n="ramAlloc">RAM Allocation (GB)</span>
+            <input type="number" id="ramAllocation" min="1" max="16" value="2" style="padding: 8px; border: 1px solid rgba(255, 255, 255, 0.2); border-radius: 6px; background: rgba(255, 255, 255, 0.1); color: #fff; font-family: inherit; font-size: 0.9rem;" />
+          </label>
+        </div>
+      </div>
+
+      <div class="modal-buttons">
+        <button id="launcherSettingsSave" class="modal-btn modal-btn-logout" style="background: #2ecc71;" data-i18n="save">Save</button>
+        <button id="launcherSettingsClose" class="modal-btn modal-btn-close" data-i18n="close">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="languages.js"></script>
   <script src="home.js"></script>
 </body>
 </html>
