--- a/renderer/console.html
+++ b/renderer/console.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>CubicLauncher - Console</title>
+  <title>Cubic Client - Console</title>
   <style>
     * {
       margin: 0;
@@ -175,8 +175,8 @@
   </div>
 
   <div class="console-container" id="consoleContainer">
-    <div class="console-line success">[CubicLauncher] Minecraft is starting...</div>
-    <div class="console-line info">[CubicLauncher] Waiting for game output...</div>
+    <div class="console-line success">[CubicClient] Minecraft is starting...</div>
+    <div class="console-line info">[CubicClient] Waiting for game output...</div>
   </div>
 
   <script src="console.js"></script>
