--- a/renderer/home.html
+++ b/renderer/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>CubicLauncher - Home</title>
+  <title>Cubic Client - Home</title>
   <style>
     * {
       margin: 0;
@@ -447,9 +447,12 @@
   <div class="container">
     <div class="sidebar">
       <div class="sidebar-logo">
-        <button id="logoBtn" title="About CubicLauncher" style="all:unset;cursor:pointer;display:flex;align-items:center;justify-content:center;">
-          <img src="img/logo_cl_small.png" alt="CubicLauncher" />
+        <button id="logoBtn" title="About Cubic Client" style="all:unset;cursor:pointer;display:flex;align-items:center;justify-content:center;">
+          <img src="img/logo_cl_small.png" alt="Cubic Client" />
         </button>
+      </div>
+      <div class="sidebar-middle">
+        <div class="sidebar-icon" id="modRepositoryBtn" title="Mod Repository">🧩</div>
       </div>
       <div class="sidebar-bottom">
         <div class="sidebar-icon" id="settingsIconBtn" title="Launcher Settings">⚙</div>
@@ -554,15 +557,15 @@
   <div id="aboutModal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="modal-title" data-i18n="aboutCubic">About CubicLauncher</div>
-        <div class="modal-description" data-i18n="CubicDesc">Launcher to connect to NintenCube services.</div>
+        <div class="modal-title" data-i18n="aboutCubic">About Cubic Client</div>
+        <div class="modal-description" data-i18n="CubicDesc">Client to connect to NintenCube services.</div>
       </div>
 
       <div style="padding:12px; margin-bottom:16px;">
-        <div style="display:flex; gap:8px; margin-bottom:8px;"><strong>Launcher:</strong> <div id="aboutName">CubicLauncher</div></div>
+        <div style="display:flex; gap:8px; margin-bottom:8px;"><strong>Client:</strong> <div id="aboutName">Cubic Client</div></div>
         <div style="display:flex; gap:8px; margin-bottom:8px;"><strong>Version:</strong> <div id="aboutVersion">—</div></div>
         <div style="display:flex; gap:8px; margin-bottom:8px;"><strong>Author:</strong> <div id="aboutAuthor">NintenCube Team</div></div>
-        <div style="display:flex; gap:8px;"><strong>Repository:</strong> <a id="aboutRepo" href="#">n1ntencube/CubicLauncher</a></div>
+        <div style="display:flex; gap:8px;"><strong>Repository:</strong> <a id="aboutRepo" href="#">n1ntencube/CubicClient</a></div>
       </div>
 
       <div class="modal-buttons">
