--- a/renderer/loading.html
+++ b/renderer/loading.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>CubicLauncher - Loading</title>
+  <title>Cubic Client - Loading</title>
   <style>
     * {
       margin: 0;
@@ -233,10 +233,10 @@
 <body>
   <div class="loading-container">
     <div class="logo">
-      <img src="img/logo_cl_small.png" alt="CubicLauncher" />
+      <img src="img/logo_cl_small.png" alt="CubicClient" />
     </div>
 
-    <div class="title">Cubic Launcher</div>
+    <div class="title">Cubic Client</div>
     <div class="subtitle">Chargement...</div>
 
     <div class="progress-bar-container">
