Add auto-update system and fix profile photo fallbacks

--- a/renderer/home.html
+++ b/renderer/home.html
@@ -478,7 +478,7 @@
 
       <div class="profile-section">
         <a href="#" id="profileLink">
-          <img id="skinImg" class="profile-img" src="profile.png" alt="Profile" />
+          <img id="skinImg" class="profile-img" src="img/logo_cl_small.png" alt="Profile" />
         </a>
         <div id="rankBadge" style="display:none; position:absolute; top:4px; right:4px; background:linear-gradient(135deg, rgba(255,255,255,0.9), rgba(200,200,255,0.85)); color:#111; padding:6px 12px; border-radius:12px; font-size:0.7rem; font-weight:700; letter-spacing:1px; box-shadow:0 4px 14px rgba(0,0,0,0.3); border:1px solid rgba(255,255,255,0.4); backdrop-filter:blur(4px);">RANK</div>
       </div>
